# pyworks.nvim

./: .gitignore  CHANGELOG.md  DISABLE_MOLTEN.md  FIX_NOW.sh  FIX_PGDAIML.md  FIX_PGDAIML_NOW.sh  LICENSE  PERFORMANCE_REVIEW.md  README.md  WORKFLOW.md  WORKFLOW_SPEC.md  lazy.lua  pyproject.toml  run_tests.sh  selene.toml  test_auto_detection.py  test_julia.jl
.github/workflows/: issue-triage.yml  tests.yml
doc/: molten_quick_reference.md  pyworks.txt  tags
docs/: molten_quick_reference.md  pyworks.txt
examples/: lazyvim-setup.lua
lua/pyworks/: auto-install.lua  autocmds.lua  cell-navigation.lua  check-dependencies.lua  commands.lua  config.lua  dependencies.lua  diagnostics.lua  health.lua  init.lua  jupytext-fix.lua  jupytext-init.lua  jupytext.lua  kernel-manager.lua  keymaps.lua  molten-safety.lua  molten.lua  molten_patches.lua  notebook-essentials.lua  notebooks.lua  package-detector.lua  setup.lua  ui.lua  utils.lua
lua/pyworks/commands/: create.lua
lua/pyworks/core/: cache.lua  cell_engine.lua  detector.lua  error_handler.lua  notifications.lua  packages.lua  recursion_guard.lua  state.lua
plugin/: jupytext-handler.lua  pyworks.lua
test/: README.md  SCENARIOS.md  create_test_scenarios.sh
tests/: README.md  cache_spec.lua  cell_engine_spec.lua  create_spec.lua  detector_spec.lua  init_spec.lua  integration_spec.lua  jupytext_spec.lua  keymaps_spec.lua  minimal_init.lua  molten_patches_spec.lua  notebook_handler_spec.lua  packages_spec.lua  performance_spec.lua  plugin_spec.lua  python_security_spec.lua  ui_spec.lua  utils_spec.lua
(+5 files in other folders)
